# aoc2024

./: .gitignore  README.md  advent-of-code.cabal  setup-commands.sh
.github/workflows/: test.yml
app/: Main.hs
src/Day01/: Solution.hs
src/Day02/: Solution.hs
src/Day03/: Solution.hs
src/Day04/: Solution.hs
src/Day05/: Solution.hs
src/Day06/: Solution.hs
src/Day07/: Solution.hs
src/Day08/: Solution.hs
src/Day09/: Solution.hs  part2.py
src/Day10/: Solution.hs
src/Day11/: Solution.hs  part2.py
src/Day12/: Solution.hs  part2.py
src/Day13/: Solution.hs  part2.py
src/Day14/: Solution.hs  part2.py
src/Day15/: Solution.hs  part2.py
src/Day16/: Solution.hs  part2.py
src/Day17/: Solution.hs
src/Day18/: Solution.hs
src/Day19/: Solution.hs
src/Day20/: Solution.hs  solution.py
src/Day21/: solution.py
src/Day22/: solution.py
src/Day23/: Solution.hs
src/Day24/: Solution.hs  part2.py
src/Day25/: Solution.hs
test/: Spec.hs
test/Day01/: SolutionSpec.hs
test/Day02/: SolutionSpec.hs
test/Day03/: SolutionSpec.hs
test/Day04/: SolutionSpec.hs
test/Day05/: SolutionSpec.hs
test/Day06/: SolutionSpec.hs
test/Day07/: SolutionSpec.hs
test/Day08/: SolutionSpec.hs
test/Day09/: SolutionSpec.hs
test/Day10/: SolutionSpec.hs
test/Day11/: SolutionSpec.hs
test/Day12/: SolutionSpec.hs
test/Day13/: SolutionSpec.hs
test/Day14/: SolutionSpec.hs
test/Day15/: SolutionSpec.hs
test/Day16/: SolutionSpec.hs
test/Day17/: SolutionSpec.hs
test/Day18/: SolutionSpec.hs
test/Day19/: SolutionSpec.hs
test/Day20/: SolutionSpec.hs
test/Day21/: SolutionSpec.hs
test/Day22/: SolutionSpec.hs
test/Day23/: SolutionSpec.hs
test/Day24/: SolutionSpec.hs
test/Day25/: SolutionSpec.hs
