cabal-version:      3.0
name:               advent-of-code
version:            0.1.0.0
synopsis:           Advent of Code solutions in Haskell
license:            MIT
author:             Ville Vesilehto
maintainer:         ville@vesilehto.fi

common shared-properties
    default-language: Haskell2010
    ghc-options:     -Wall
    build-depends:   base ^>=4.17.0.0

library
    import:           shared-properties
    hs-source-dirs:   src
    exposed-modules:  Day01.Solution
                     -- Day02.Solution
    -- Add more days as needed
    build-depends:    containers,
                     text

executable advent-of-code
    import:           shared-properties
    main-is:         Main.hs
    hs-source-dirs:  app
    build-depends:   advent-of-code

test-suite advent-of-code-test
    import:           shared-properties
    type:            exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         Spec.hs
    other-modules:   Day01.SolutionSpec
                     -- Day02.SolutionSpec
    -- Add more test modules as needed
    build-depends:   advent-of-code,
                    hspec ^>=2.10.0 