cabal-version:      3.0
name:               advent-of-code
version:            0.1.0.0
synopsis:           Advent of Code solutions in Haskell
license:            MIT
author:             Ville Vesilehto
maintainer:         ville@vesilehto.fi
build-type:          Simple
tested-with:         GHC == 9.4.7
                   , GHC == 9.6.3
                   , GHC == 9.8.1

common shared-properties
    default-language: Haskell2010
    ghc-options:     -Wall
    build-depends:   base >=4.17.0.0 && <5

library
    import:           shared-properties
    hs-source-dirs:   src
    exposed-modules:  Day01.Solution
                      Day02.Solution
                      Day03.Solution
                      Day04.Solution
                      Day05.Solution
                      Day06.Solution
                      Day07.Solution
                      Day08.Solution
                      Day09.Solution
                      Day10.Solution
                      Day11.Solution
    -- Add more days as needed
    build-depends:    containers,
                     text

executable advent-of-code
    import:           shared-properties
    main-is:         Main.hs
    hs-source-dirs:  app
    build-depends:   advent-of-code

test-suite advent-of-code-test
    import:           shared-properties
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    default-language: Haskell2010
    other-modules:    Day01.SolutionSpec
                      Day02.SolutionSpec
                      Day03.SolutionSpec
                      Day04.SolutionSpec
                      Day05.SolutionSpec
                      Day06.SolutionSpec
                      Day07.SolutionSpec
                      Day08.SolutionSpec
                      Day09.SolutionSpec
                      Day10.SolutionSpec
                      Day11.SolutionSpec
    -- Add more test modules as needed
    build-depends:    advent-of-code
                    , hspec >= 2.7 && < 3
    build-tool-depends: hspec-discover:hspec-discover
